--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .container{
-    margin: 200px;
+    padding: 20px 0px;
     text-align: center;
 }
 .container table{
@@ -23,7 +23,7 @@
     height: 75px;
     width: 100px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 15px;
 }
 .btn:focus{
     outline: none;
